# custom_forms

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: automatic_tests.yaml
domain/: entities.py
src/core/application/: handlers.py  queries.py  types.py
src/core/domain/: exceptions.py  models.py  repositories.py  services.py  value_objects.py
src/core/domain/entities/: __init__.py  base.py  field.py  form.py  response.py
src/infrastructure/repositories/: __init__.py  mocked.py
src/presentation/api/: main.py
src/presentation/api/forms/: controllers.py  endpoints.py
tests/core/: conftest.py
tests/core/application/: test_handlers.py
tests/core/application/handlers/: test_get_form.py  test_list_all_forms.py
tests/core/domain/: conftest.py  test_entities.py  test_models.py  test_value_objects.py
tests/core/domain/entities/: test_field.py  test_form.py
tests/core/domain/entities/field/: test_boolean_field.py  test_field.py
tests/core/domain/entities/response/: test_form_response.py
tests/core/domain/services/: test_submit_form.py
tests/mocks/core/domain/: repositories.py
