[project]
name = "custom_forms"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "ruff>=0.7.3",
]

[tool.pytest.ini_options]
python_files = "test*.py"
pythonpath = "src"

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "raise NotImplementedError",
]
